Fixed overlap design

--- a/src/assets/scss/modals/customer.scss
+++ b/src/assets/scss/modals/customer.scss
@@ -186,7 +186,7 @@
   left: $px35;
   overflow: hidden;
   background: #fff;
-  z-index: 9;
+  z-index: 7;
   padding: 0 15px;
   font-weight: bold;
   text-transform: capitalize;
